# CG1-Homeworks

assignment1-iamabigartist/: README.md
assignment1-iamabigartist/Coding/: .gitignore  CmakeLists.txt  Debug_exe.rar  README.md
assignment1-iamabigartist/Report/: .gitignore  README.md  assignment.tex
assignment1-iamabigartist/Test1/: Test1.cpp  Test1.vcxproj  Test1.vcxproj.filters
assignment2-iamabigartist/: .gitignore  LICENSE  README.md
assignment2-iamabigartist/Coding/: CMakeLists.txt
assignment2-iamabigartist/Coding/3rdLibs/glad/include/glad/: glad.h
assignment2-iamabigartist/Coding/3rdLibs/lib/: glfw3.lib
assignment2-iamabigartist/Coding/inc/: Camera.h  MTime.h  my_texture.h  shader_m.h  stb_image.h
assignment2-iamabigartist/Coding/shader/: fragment1.frag  vertex1.vert
assignment2-iamabigartist/Coding/src/: BsplineSurface.cpp  BsplineSurface.hpp  Camera.cpp  ControlPoint.cpp  ControlPoint.hpp  MTime.cpp  SurfaceMesh.hpp  SurfaceRender.cpp  SurfaceRender.hpp  Utility.cpp  Utility.hpp  header.hpp  test_bSplineSurface.cpp  vertex.hpp
assignment2-iamabigartist/Report/: .gitignore
assignment3-iamabigartist/: .gitignore  README.md
assignment3-iamabigartist/Coding/: Compare1.txt
assignment3-iamabigartist/Report/: assignment.tex
assignment4-iamabigartist/: .gitignore  README.md
assignment4-iamabigartist/Coding/: CMakeLists.txt  list.docx
assignment4-iamabigartist/Report/: assignment.tex
assignment5-iamabigartist/: README.md
assignment5-iamabigartist/Coding/: CMakeLists.txt
assignment5-iamabigartist/Report/: assignment.tex
(+81 files in other folders)
